--- a/frontend/style.css
+++ b/frontend/style.css
@@ -48,6 +48,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 h1 {
@@ -290,21 +291,24 @@ h2 {
 }
 
 #center-area {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
-  grid-column: span 2 / span 2;
-  grid-row-start: 2;
-  grid-column-start: 2;
-  padding: 20px;
+  gap: 40px;
+  z-index: 10;
 }
 
 #deck,
 #discard-pile {
-  position: relative;
   width: 80px;
   height: 120px;
-  margin: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .deck-card {
